--- a/style/statistics.css
+++ b/style/statistics.css
@@ -17,7 +17,7 @@
 
   *{ box-sizing:border-box; }
   html,body{
-    height:100%; margin:0; background:#0d0d0d; color:var(--text);
+    height:100%; margin:0 px; background:#0d0d0d; color:var(--text);
     font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, sans-serif;
   }
 
@@ -121,10 +121,10 @@
 
   .num{
     font-family: "Minecraft", monospace;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 1;
     text-align: right;
-    padding: 10px 12px;
+    padding: 0px 12px;
     white-space: nowrap;
     color: var(--text);
   }
@@ -132,4 +132,12 @@
 
   tbody tr:hover td, tbody tr:hover th{
     background: rgba(255,255,255,.02);
+  }
+
+  .NameRepo {
+    font-family: "Minecraft", monospace;
+    font-size: 9px;
+    line-height: 1;
+    padding: 0px;
+    margin: 0px;
   }
