--- a/style/statistics.css
+++ b/style/statistics.css
@@ -36,7 +36,7 @@
   .title{
     margin: 0 0 12px;
     text-align: center;
-    font-family: "Minecraft", monospace;   /* point 2 */
+    font-family: "Minecraft", monospace;
     font-size: 28px;
     letter-spacing: .5px;
     color: #dcdcdc;
@@ -141,3 +141,44 @@
     padding: 0px;
     margin: 0px;
   }
+
+
+
+
+
+.mc-btn-wrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+/* Bouton style menu Minecraft gris */
+.mc-btn {
+  display: inline-block;
+  padding: 8px 120px;
+  font-family: "Minecraft", monospace;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #212121;
+  background:
+      linear-gradient(#8C8C8C, #8C8C8C) top right / 2px 2px no-repeat,
+      linear-gradient(#8C8C8C, #8C8C8C) bottom left / 2px 2px no-repeat,
+      linear-gradient(#fff, #fff) top left  / 100% 2px no-repeat,
+      linear-gradient(#373737, #373737) bottom left / 100% 2px no-repeat,
+      linear-gradient(#fff, #fff) top left  / 2px 100% no-repeat,
+      linear-gradient(#373737, #373737) top right / 2px 100% no-repeat,
+      #8C8C8C
+    ;
+  cursor: pointer;
+  image-rendering: pixelated;
+}
+
+.mc-btn:hover {
+  transform: translateY(-3px);
+  background: #e0e0e0d4;
+}
+
+.mc-btn:active {
+  transform: translateY(3px);
+}
